# Projects

./: .gitignore
Pokedex/pokedex_cli/: CMakeLists.txt  PrintPokemonInfo.cpp  PrintPokemonInfo.h  WrappingJSONFiles.cpp  WrappingJSONFiles.h  main.cpp
Pokedex/pokedex_cli/pokemon/1/: 1.json
Pokedex/pokedex_cli/pokemon/2/: pokemonInfo.json
Pokedex/pokedex_cli/pokemon/3/: 3.json
Pokedex/pokedex_cli/pokemonTypes/: bug.json  dark.json  dragon.json  electric.json  fairy.json  fighting.json  fire.json  flying.json  ghost.json  grass.json  ground.json  ice.json  poison.json  psychic.json  rock.json  steel.json  water.json
Pokedex/pokedex_cli/tst/: tests.cpp
